[package]
name = "tests"
version = "0.1.0"
edition = "2021"
publish = false

[dev-dependencies]
anyhow = "1"
cio-api = { git = "https://github.com/oxidecomputer/cio", branch = "master" }
lazy_static = "^1.4.0"
pretty_assertions = "1"
slog = "2"
slog-term = "2"


[[test]]
name = "test_crate1"
path = "test_crate1.rs"

